# cpu-scheduling-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/: idle_gap.txt  procs.txt
include/: process.hpp  report.hpp  scheduler.hpp
src/: main.cpp  process.cpp  report.cpp  scheduler.cpp
tests/: test_scheduler.cpp
